--- a/app/views/problems/_form.html.erb
+++ b/app/views/problems/_form.html.erb
@@ -12,23 +12,19 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label "Marca / Modelo" %><br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :brand %><br>
-    <%= f.text_field :brand %>
-  </div>
-  <div class="field">
-    <%= f.label :model %><br>
-    <%= f.text_field :model %>
+    <%= f.label "Descripcion" %><br>
+    <%= f.text_area :description %>
   </div>
   <div class="field">
     <%= f.label :year %><br>
     <%= f.number_field :year %>
   </div>
   <div class="field">
-    <%= f.label :budget %><br>
+    <%= f.label "Presupuesto" %><br>
     <%= f.text_field :budget %>
   </div>
   <div class="actions">
