Add token dynamically from controller

--- a/app/views/videocall/vidyoconnector.html.erb
+++ b/app/views/videocall/vidyoconnector.html.erb
@@ -218,7 +218,7 @@ to hook up all of the events to elements. -->
 			The token will contain its expiration date and the user ID.
 			For more information visit the developer section of http://vidyo.io -->
 			<label>Token</label>
-			<input type="text" id="token" placeholder="ACCESS-TOKEN" value="cHJvdmlzaW9uAGNpY2xvdXNlckAxYmU4NjUudmlkeW8uaW8ANjM2NzM5MzA3MTMAAGE3OGVhNDZhNGEwZTlhODZjNzc4MWMwODQxM2RjMGRjZjVjNWI5YmNlMjAwYzE3ZjhhZWQ1NmI5Njg5YjEyYzZlOGE1YzhhZGI4MjRhM2M0NTYxNDAyYmRlNjU0NmM3Yw==">
+			<input type="text" id="token" placeholder="ACCESS-TOKEN" value="<%= @token %>">
 		</p>
 		<p>
 			<!-- This is the display name that other users will see.
