Fix bug in problems show view

--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -1,18 +1,11 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Name:</strong>
   <%= @problem.name %>
 </p>
 
 <p>
-  <strong>Brand:</strong>
-  <%= @problem.brand %>
-</p>
-
-<p>
-  <strong>Model:</strong>
-  <%= @problem.model %>
+  <strong>Description:</strong>
+  <%= @problem.description %>
 </p>
 
 <p>
