Remove side panel from videocall page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body><!--
 	<% if notice %>
   <p class="alert alert-success"><%= notice %></p>
 <% end %>
@@ -44,7 +44,7 @@
     </div>
   </header>
 <% end %>
-</p>
+</p> -->
 <%= yield %>
 
 </body>
