--- a/app/views/videocall/vidyoconnector.html.erb
+++ b/app/views/videocall/vidyoconnector.html.erb
@@ -202,7 +202,7 @@
 <!-- We execute the VidyoConnectorApp library on page load
 to hook up all of the events to elements. -->
 <body id="vidyoConnector">
-	<div id="options" class="optionsHide"><!-- 
+	<div id="options" class="optionsHide" style="visibility: hidden;"><!-- 
 		<%= image_tag "VidyoIcon.png" %> -->
 		<!-- <img class="logo" src="Images/VidyoIcon.png"/> -->
 
